@@ -1,3 +1,11 @@
+2009-05-06  Christian Persch  <chpe@gnome.org>
+
+	More gtk single include fixes. Bug #535475.
+
+	* bonobo/bonobo-control.c:
+	* bonobo/bonobo-ui-container.c:
+	* bonobo/bonobo-widget.c:
+
 2009-03-06  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* NEWS: Updated for release.
